# aTerminal_SyncService

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: FindReflectCpp.cmake
config/: debug.properties
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/: Defines.h
src/app/include/Domain/: PluginOptions.h  User.h
src/app/include/Infra/: GoogleAuthKeyHandler.h  InMemoryPluginOptionStorage.h  InMemoryPluginOptionStorageUoW.h  InMemoryUserStorage.h  InMemoryUserStorageUoW.h  SqlitePluginOptionStorage.h  SqlitePluginOptionStorageUoW.h  SqliteStorageUoW.h  SqliteUserStorage.h  SqliteUserStorageUoW.h
src/app/include/Port/: UnitOfWork.h
src/app/include/Port/Plugin/: PluginOptionsStorage.h  PluginOptionsUpdateableStorage.h
src/app/include/Port/User/: AuthKeyHandler.h  UserStorage.h  UserUpdatableStorage.h
src/app/include/Rest/: ControllerResolver.h  RequestRouter.h
src/app/include/Rest/Controller/: AuthController.h  NotFoundController.h  PluginOptionsController.h  UserController.h
src/app/include/Rest/Middleware/: AuthMiddleware.h
src/app/include/Rest/Resolver/: AuthControllerResolver.h  NotFoundControllerResolver.h  PluginOptionsResolver.h
src/app/include/Service/: JwtHandler.h  MessageBus.h
src/app/include/Service/Plugin/: GetPluginOptionsHandler.h  PostPluginOptionsHandler.h
src/app/include/Service/User/: AuthUserViaGoogleHandler.h  LoginUserHandler.h  RegisterUserHandler.h
src/app/inl/: AuthUserViaGoogleHandler.inl  LoginUserHandler.inl  RegisterUserHandler.inl  RequestRouter.inl
src/app/src/: AuthController.cpp  AuthControllerResolver.cpp  AuthKeyHandler.cpp  AuthMiddleware.cpp  ControllerResolver.cpp  Defines.cpp  GetPluginOptionsHandler.cpp  GoogleAuthKeyHandler.cpp  InMemoryPluginOptionStorage.cpp  InMemoryPluginOptionStorageUoW.cpp  InMemoryUserStorage.cpp  InMemoryUserStorageUoW.cpp  JwtHandler.cpp  LoginUserHandler.cpp  MessageBus.cpp  NotFoundController.cpp  NotFoundControllerResolver.cpp  PluginOptions.cpp  PluginOptionsController.cpp  PluginOptionsResolver.cpp  PluginOptionsStorage.cpp  PluginOptionsUpdateableStorage.cpp  PostPluginOptionsHandler.cpp  RegisterUserHandler.cpp  RequestRouter.cpp  SqlitePluginOptionStorage.cpp  SqlitePluginOptionStorageUoW.cpp  SqliteStorageUoW.cpp  SqliteUserStorage.cpp  SqliteUserStorageUoW.cpp  UnitOfWork.cpp  User.cpp  UserController.cpp  UserStorage.cpp  UserUpdatableStorage.cpp  main.cpp
src/app/tests/: LoginUserHandler.tests.cpp  MessageBus.tests.cpp  RegisterUserHandler.tests.cpp  Test_UserController.cpp  UserController.tests.cpp
src/app/tests/mocks/: PasswordHasher.mock.h  UserUpdatableStorage.mock.h
src/util/: CMakeLists.txt
src/util/include/Util/: BusinessException.h  Cbs.h  Errors.h  LogicException.h  Tuple.h
src/util/include/Util/Crypto/: PasswordHasher.h
src/util/include/Util/Test/: FakeRequest.h  FakeResponse.h
src/util/src/: BusinessException.cpp  Cbs.cpp  Errors.cpp  FakeRequest.cpp  FakeResponse.cpp  LogicException.cpp  PasswordHasher.cpp  Tuple.cpp
src/util/tests/: PasswordHasher.tests.cpp
test_requests/: Auth.tests.http  PluginOptions.http
